--- a/Tetris Game/stylesheet.css
+++ b/Tetris Game/stylesheet.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     background-color: #000;
     font-family: "Press Start 2P", cursive;
